manifests/ingress-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multilingual-embedding
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: multilingual-embedding.llmhub.t-systems.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: multilingual-embedding
            port:
              number: 80
  tls:
  - hosts:
    - multilingual-embedding.llmhub.t-systems.net
    secretName: multilingual-embedding.llmhub.t-systems.net-tls
